<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">МатФ</string>
    <string name="app_title">МатФ</string>
    <string name="username_hint">Корисничко име (са сервера Алас)</string>
    <string name="password_hint">Лозинка</string>
    <string name="login_button">Пријава</string>
    <string name="logout_button">Одјава</string>
    <string name="attendance_history_menu">Преглед присуства</string>
    <string name="attendance_history_title">Присуство по предметима</string>
    <string name="attendance_history_semester_prefix">Семестар: %1$s</string>
    <string name="attendance_history_semester_unavailable">Семестар није доступан</string>
    <string name="attendance_history_error">Грешка при учитавању присуства.</string>
    <string name="attendance_history_empty">Немате забележено присуство ни на једном предмету у текућем семестру.</string>
    <string name="attendance_history_unknown_course">Непознат предмет</string>
    <string name="attendance_history_recorded_count">Часови са забележеним присуством: %1$d</string>
    <string name="attendance_history_attended_count">Часови на којима сте Ви присуствовали: %1$d</string>
    <string name="attendance_history_progress">Присуство: %1$d%%</string>
    <string name="auth_required_fields">Корисничко име и лозинка су обавезни.</string>
    <string name="auth_invalid_credentials">Неисправни подаци за пријаву или је сесија опозвана.</string>
    <string name="auth_phone_reserved">Овај телефон је већ резервисан за данас.</string>
    <string name="auth_radius_unreachable">Аутентификациони сервис не може да дође до RADIUS сервера.</string>
    <string name="auth_server_error">Грешка сервера (%1$d).</string>
    <string name="auth_network_error">Грешка мреже: %1$s</string>
    <string name="auth_unknown_error">Неочекивана грешка: %1$s</string>
    <string name="attendance_scan_scanning">Скенирајте QR кôд који је наставник приказао</string>
    <string name="attendance_scan_no_camera">За скенирање QR кода потребно је да дозволиш приступ камери.</string>
    <string name="attendance_scan_invalid">Скенирање QR кода није успело.</string>
    <string name="attendance_scan_loading_data">Учитавам податке...</string>
    <string name="attendance_scan_checking_location">Проверавам локацију...</string>
    <string name="attendance_scan_choose_number">Одаберите број који је приказан на екрану</string>
    <string name="attendance_scan_success">Успешно сте се пријавили</string>
    <string name="attendance_scan_success_note">Успешно сте се пријавили. Можете затворити скенер.</string>
    <string name="attendance_scan_blocked">Пријава није могућа</string>
    <string name="attendance_scan_expired">Покушај је истекао</string>
    <string name="attendance_scan_close">Затвори</string>
    <string name="attendance_scan_error">Грешка</string>
    <string name="attendance_scan_needs_location">За скенирање QR кода је потребна локација уређаја.</string>
    <string name="attendance_scan_geofence_block_title">Пријава није могућа са локације на којој се налазите.</string>
    <string name="attendance_scan_course_location_missing">Локација за ову учионицу није подешена.</string>
    <string name="attendance_scan_cannot_determine_location">Не могу да утврдим локацију уређаја. Укључите локацију и покушајте поново.</string>
    <string name="attendance_scan_invalid_submit_state">Грешка. Поново скенирајте QR кôд.</string>
    <string name="attendance_scan_location_permission_required">Потребно је да дозволите апликацији да приступа локацији.</string>
    <string name="attendance_scan_geofence_current_location">Ваша локација: %1$s, %2$s</string>
    <string name="attendance_scan_geofence_nearest_location">Најближа локација: %1$s</string>
    <string name="attendance_scan_geofence_distance">, растојање: %1$s m</string>
    <string name="attendance_scan_geofence_radius">, радијус: %1$s m</string>
    <string name="attendance_scan_geofence_retry">Поново скенирајте QR код када дођете у одговарајућу зграду.</string>
    <string name="attendance_scan_geofence_unknown">непозната</string>
    <string name="attendance_scan_event_date_label">Датум: %1$s</string>
    <string name="attendance_scan_event_room_label">Сала: %1$s</string>
    <string name="attendance_scan_event_time_label">Време: %1$s</string>
    <string name="attendance_scan_event_teacher_label">Професор: %1$s</string>
    <string name="home_qr_label">Пријава присуства</string>
</resources>
